Modify assets.xcassets and update README

--- a/C+++/Classes/Main.storyboard
+++ b/C+++/Classes/Main.storyboard
@@ -1858,8 +1858,8 @@
                                                                     <rect key="frame" x="14" y="2" width="152" height="45"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
-                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="2t0-If-GcP">
-                                                                            <rect key="frame" x="37" y="23" width="114" height="16"/>
+                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="749" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="2t0-If-GcP">
+                                                                            <rect key="frame" x="37" y="19" width="114" height="20"/>
                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="File Name" usesSingleLineMode="YES" id="Xm2-Me-jUd">
                                                                                 <font key="font" metaFont="systemMedium" size="13"/>
                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1889,7 +1889,7 @@
                                                                         <constraint firstItem="2t0-If-GcP" firstAttribute="leading" secondItem="mM0-iJ-lgN" secondAttribute="trailing" constant="5" id="AG8-Ud-Pqj"/>
                                                                         <constraint firstItem="2t0-If-GcP" firstAttribute="top" secondItem="CRh-TS-ypj" secondAttribute="top" constant="6" id="NFJ-fD-ouW"/>
                                                                         <constraint firstAttribute="trailing" secondItem="2t0-If-GcP" secondAttribute="trailing" constant="3" id="Phq-PQ-i9K"/>
-                                                                        <constraint firstItem="l6L-28-z9c" firstAttribute="top" secondItem="2t0-If-GcP" secondAttribute="bottom" constant="5" id="aZf-0z-W6N"/>
+                                                                        <constraint firstItem="l6L-28-z9c" firstAttribute="top" secondItem="2t0-If-GcP" secondAttribute="bottom" constant="1" id="aZf-0z-W6N"/>
                                                                         <constraint firstAttribute="bottom" secondItem="mM0-iJ-lgN" secondAttribute="bottom" constant="4" id="hBz-KU-YKS"/>
                                                                         <constraint firstAttribute="trailing" secondItem="l6L-28-z9c" secondAttribute="trailing" constant="3" id="jbB-T0-VII"/>
                                                                         <constraint firstItem="l6L-28-z9c" firstAttribute="leading" secondItem="mM0-iJ-lgN" secondAttribute="trailing" constant="5" id="ove-VO-1MD"/>
@@ -1946,9 +1946,9 @@
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="AppIcon" id="9Hf-fo-Q86"/>
                             </imageView>
                             <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e8r-uP-6l8">
-                                <rect key="frame" x="206" y="101.5" width="30.5" height="34"/>
+                                <rect key="frame" x="206" y="103" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="NSAddTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="s4E-40-8Va">
+                                <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="NewDoc" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="s4E-40-8Va">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="systemLight" size="13"/>
                                 </buttonCell>
@@ -1957,25 +1957,14 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Xm-VJ-BEc">
-                                <rect key="frame" x="206" y="61" width="30.5" height="35"/>
+                                <rect key="frame" x="206" y="63" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="NSTouchBarFolderTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="wpa-My-BDj">
+                                <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="Folder" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="wpa-My-BDj">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="systemLight" size="13"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="openDocument:" target="stx-lN-Mur" id="yCC-7o-V1S"/>
-                                </connections>
-                            </button>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Baf-Sd-BUz">
-                                <rect key="frame" x="206" y="19" width="30" height="33"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="NSPathTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="eYJ-sc-zff">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="systemLight" size="13"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="newProject:" target="stx-lN-Mur" id="X6x-4O-5n5"/>
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4N-GY-Gyk">
@@ -2001,7 +1990,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Oa2-O3-Y1O">
-                                <rect key="frame" x="246" y="25" width="195" height="20"/>
+                                <rect key="frame" x="246" y="28" width="195" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="bevel" title="Create a new C+++ project" bezelStyle="rounded" alignment="left" imageScaling="proportionallyDown" inset="2" id="4fl-Eh-VKg">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -2009,6 +1998,17 @@
                                 </buttonCell>
                                 <connections>
                                     <action selector="newProject:" target="stx-lN-Mur" id="xpi-GT-S1m"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Baf-Sd-BUz">
+                                <rect key="frame" x="206" y="23" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="Project" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="eYJ-sc-zff">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="systemLight" size="13"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="newProject:" target="stx-lN-Mur" id="X6x-4O-5n5"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -2112,19 +2112,21 @@
         <image name="AppIcon" width="128" height="128"/>
         <image name="Code" width="160" height="170"/>
         <image name="Debug" width="1100" height="1100"/>
+        <image name="Folder" width="512" height="512"/>
         <image name="HideLeftSidebar" width="256" height="256"/>
         <image name="NSAddTemplate" width="14" height="13"/>
         <image name="NSEnterFullScreenTemplate" width="16" height="15"/>
         <image name="NSGoRightTemplate" width="10" height="14"/>
         <image name="NSListViewTemplate" width="16" height="12"/>
-        <image name="NSPathTemplate" width="19" height="12"/>
         <image name="NSTouchBarAddTemplate" width="14" height="13"/>
         <image name="NSTouchBarFolderTemplate" width="18" height="14"/>
         <image name="NSTouchBarGetInfoTemplate" width="15" height="15"/>
         <image name="NSTouchBarHistoryTemplate" width="15" height="15"/>
         <image name="NSTouchBarPlayTemplate" width="12" height="13"/>
         <image name="NSTouchBarSearchTemplate" width="15" height="15"/>
+        <image name="NewDoc" width="512" height="512"/>
         <image name="NewFile" width="1320" height="1320"/>
+        <image name="Project" width="512" height="512"/>
         <image name="Run" width="256" height="256"/>
         <image name="Submit" width="512" height="512"/>
         <image name="Test" width="1300" height="1300"/>
